--- a/Expotec/pagina2.html
+++ b/Expotec/pagina2.html
@@ -80,7 +80,7 @@
             
         <p>Em suma, um site focado na divulgação de ONGs desempenha um papel vital na mobilização da sociedade civil em torno de causas importantes, promovendo a sensibilização para questões sociais e ambientais, incentivando o voluntariado e contribuindo para um mundo mais justo e solidário. </p>
      
-        <a href="http://127.0.0.1:5501/testes/ongsonline.html" class="btn">Explorar mais</a>
+        <a href="expotec.html" class="btn">Explorar mais</a>
     </div>
 </body>
 </html>
